--- a/src/style/style.css
+++ b/src/style/style.css
@@ -1,4 +1,11 @@
-
+@font-face {
+    font-family: "Lucida Sans Unicode"; 
+    src: url(src/font/Lucida/lucidasansunicode.ttf);
+}
+* {
+    font-family: "Lucida Sans Unicode"; 
+    transition: all .3s ease-in;
+}
 .page{
     width: 1440px;
     margin: 0 auto;
@@ -33,21 +40,29 @@ ul li p {
     color: #FFFFFF;
     margin-bottom: 4px;
 }
+ul li p:hover{
+    font-size: 26px;
+}
 ul li span {
     display: inline-block;
     font-family: 'Lucida Sans Unicode';
     font-size: 22px;
     color: rgba(255, 255, 255, 0.7);
     margin-right: 11px;
+    padding-top: 19px;
     /* vertical-align: super; */
 }
 ul{
-    display: block;
+    display: table;
     margin: 0 auto;
-    margin-bottom: 37px;
+    /* margin-bottom: 37px; */
     width: 1166px;
     font-size: 0;
+    max-height: 600px;
     /* margin-left: 137px; */
+    box-sizing:border-box;
+    overflow: hidden;
+    
 }
 li{
     display: inline-block;
@@ -61,11 +76,18 @@ li{
     background: #ccc;
     position: relative;
     font-size: 22px;
-    line-height: 26px;
+    height: 147px;
+    line-height: 25%;
+    opacity: 0.7;
 }
+li:hover{
+    opacity: 1;
+}
+
 .footer{
     width: 549px;
-   margin-left:111px ;
+    margin-left:111px ;
+    margin-top: 35px;
 }
 .lisboa,.sanfrancisco{
     width: 50%;
@@ -76,21 +98,24 @@ li{
 .sydney{
     width: 100%;
 }
+
 .lisboa{
-    background: #3399CC;
+    background:rgba(51, 153, 204, 0.7);
     border: 2px solid #FFFFFF;
+    /* height: 150px; */
 }
 .paris{
-    background-color:#33CCCC;
+    background-color:rgba(51, 204, 204, 0.5);
     border: 2px solid #FFFFFF;
 }
 .belgrade{
-    background-color:#996699;
+    background-color:rgba(153, 102, 153, 0.8);
     border: 2px solid #FFFFFF;
 }
 .venice{
     background-color:#C24747 ;
     border: 2px solid #FFFFFF;
+    /* height: 150px; */
 }
 .telavive{
     background-color: #E2674A;
